fixed rookie copy paste error I would have noticed if I weren't coding on mobile

--- a/site.css
+++ b/site.css
@@ -26,7 +26,6 @@ body {
 #header {
 	text-align: center;
 	color: white;
-	padding: 60px;
 	margin-bottom: 1px;
 	background-image: url("background.jpg");
 	background-position: center;
@@ -39,7 +38,6 @@ body {
 	background: #000000C0;
 	padding-top: 50px;
 	padding-bottom: 50px;
-	width: 100%;
 }
 }
 
